<resources>
    <string name="app_name">3Dent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Config.</string>
    <string name="title_activity_activity2">Activity2</string>
    <string name="title_activity_login">Login</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_redimir">RedimirActivity</string>
    <string name="title_activity_notification">notificationActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="contact">Contacto</string>
    <string name="profile">Perfil</string>
    <string name="quit">Salir</string>
    <string name="rewards">Beneficios</string>
    <string name="points">Puntos</string>

    <string name="title_activity_profiles">ProfilesActivity</string>
    <string name="title_activity_save_profile">SaveProfileActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_">Activity</string>

    <!-- Mese del Año -->
    <string name="January">Enero</string>
    <string name="February">Febrero</string>
    <string name="March">Marzo</string>
    <string name="April">Abril</string>
    <string name="May">Mayo</string>
    <string name="June">Junio</string>
    <string name="July">Julio</string>
    <string name="August">Agosto</string>
    <string name="September">Septiembre</string>
    <string name="October">Octubre</string>
    <string name="November">Noviembre</string>
    <string name="December">Diciembre</string>


</resources>
