<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.acarolabs.a3dent.Activities.Activity2">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

    <item android:id="@+id/action_contact"
        android:title="@string/contact"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_profile"
        android:title="@string/profile"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_quit"
        android:title="@string/quit"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
