<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffcdcdcd"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="1dp"
            android:layout_height="310dp"
            android:background="@drawable/rectangulo"
            >
            <TextView
                android:text="@string/January"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/keyboardleft"
                android:drawableRight="@drawable/keyboardright"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="35dp"
                android:id="@+id/my_recycler_view_January"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:scrollbars="horizontal"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                tools:context="com.acarolabs.a3dent.Fragments.GalleryFragment"/>
        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="1dp"
        android:layout_height="310dp"
        android:background="@drawable/rectangulo">
    <TextView
        android:text="@string/February"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:drawableLeft="@drawable/keyboardleft"
        android:drawableRight="@drawable/keyboardright"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view_February"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scrollbars="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        tools:context="com.acarolabs.a3dent.Fragments.GalleryFragment"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:saveEnabled="false"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="1dp"
        android:layout_height="310dp"
        android:background="@drawable/rectangulo"
        >
    <TextView
        android:text="@string/March"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/keyboardleft"
        android:drawableRight="@drawable/keyboardright"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view_March"
        android:layout_width="match_parent"
        android:layout_marginTop="35dp"
        android:layout_height="290dp"
        android:scrollbars="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        tools:context="com.acarolabs.a3dent.Fragments.GalleryFragment"/>
  </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="1dp"
        android:layout_height="310dp"
        android:background="@drawable/rectangulo"
        >
    <TextView
        android:text="@string/April"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/keyboardleft"
        android:drawableRight="@drawable/keyboardright"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view_April"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scrollbars="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        tools:context="com.acarolabs.a3dent.Fragments.GalleryFragment"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="1dp"
        android:layout_height="310dp"
        android:background="@drawable/rectangulo"
        >
    <TextView
        android:text="@string/May"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/keyboardleft"
        android:drawableRight="@drawable/keyboardright"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view_May"
        android:layout_width="match_parent"
        android:layout_marginTop="35dp"
        android:layout_height="300dp"
        android:scrollbars="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        tools:context="com.acarolabs.a3dent.Fragments.GalleryFragment"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="1dp"
        android:layout_height="310dp"
        android:background="@drawable/rectangulo"
        >
    <TextView
        android:text="@string/June"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/keyboardleft"
        android:drawableRight="@drawable/keyboardright"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view_June"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="35dp"
        android:scrollbars="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        tools:context="com.acarolabs.a3dent.Fragments.GalleryFragment"/>
   </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="1dp"
        android:layout_height="310dp"
        android:background="@drawable/rectangulo"
        >
    <TextView
        android:text="@string/July"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/keyboardleft"
        android:drawableRight="@drawable/keyboardright"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view_July"
        android:layout_width="match_parent"
        android:layout_marginTop="35dp"
        android:layout_height="300dp"
        android:scrollbars="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        tools:context="com.acarolabs.a3dent.Fragments.GalleryFragment"/>
   </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="1dp"
        android:layout_height="310dp"
        android:background="@drawable/rectangulo"
        >
    <TextView
        android:text="@string/August"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/keyboardleft"
        android:drawableRight="@drawable/keyboardright"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view_August"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scrollbars="horizontal"
        android:layout_marginTop="35dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        tools:context="com.acarolabs.a3dent.Fragments.GalleryFragment"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="1dp"
        android:layout_height="310dp"
        android:background="@drawable/rectangulo"
        >
    <TextView
        android:text="@string/September"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/keyboardleft"
        android:drawableRight="@drawable/keyboardright"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view_September"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="35dp"
        android:scrollbars="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        tools:context="com.acarolabs.a3dent.Fragments.GalleryFragment"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="1dp"
        android:layout_height="310dp"
        android:background="@drawable/rectangulo"
        >
    <TextView
        android:text="@string/October"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/keyboardleft"
        android:drawableRight="@drawable/keyboardright"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view_October"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="35dp"
        android:scrollbars="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        tools:context="com.acarolabs.a3dent.Fragments.GalleryFragment"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="1dp"
        android:layout_height="310dp"
        android:background="@drawable/rectangulo"
        >
    <TextView
        android:text="@string/November"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/keyboardleft"
        android:drawableRight="@drawable/keyboardright"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view_November"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="35dp"
        android:scrollbars="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        tools:context="com.acarolabs.a3dent.Fragments.GalleryFragment"/>
   </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:layout_height="310dp"
        android:background="@drawable/rectangulo"
        >
    <TextView
        android:text="@string/December"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/keyboardleft"
        android:drawableRight="@drawable/keyboardright"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view_December"
        android:layout_width="match_parent"
        android:layout_marginTop="35dp"
        android:layout_height="300dp"
        android:scrollbars="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        tools:context="com.acarolabs.a3dent.Fragments.GalleryFragment"/>
   </android.support.v7.widget.CardView>
</LinearLayout>

</ScrollView>